--- a/index.html
+++ b/index.html
@@ -2,8 +2,46 @@
 <html>
     <head>
         <title>My Website</title>
+        <script src="https://kit.fontawesome.com/ede844f6e4.js" crossorigin="anonymous"></script>
     </head>
     <body>
-      <h1> Hello foodies! </h1>  
+  <div class ="Nav-Wrapper">
+    <h4>Sports Star</h4>
+    <span>
+      <a href="#">About</a>
+      <a href="#">Services</a>
+      <a href="#">Contact Us</a>
+    </span>
+
+  </div> 
+  <hr>
+  <h4>Introduction</h4>
+  <p>
+    This is a sports shop,where you can buy all the sports equipment right from your house.
+  </p>
+  <hr>
+  <figure>
+    <img src="./images/pexels-pixabay-46798.jpg" width="500px">
+    <figcaption>brazucca</figcaption>
+  </figure>
+  <figure>
+    <img src="./images/pexels-rodnae-productions-5836977.jpg" width="500px">
+    <figcaption>brazucca Lite</figcaption>
+  </figure>
+  <hr>
+  <a href="https://www.instagram.com/">
+    <i class="fab fa-instagram"></i>
+  </a>
+  <div>Contact us</div>
+  <form>
+    <label>First name:</label><br>
+  <input type="text"name="Name" placeholder="Your Name"><br>
+  <label >Email:</label><br>
+  <input type="text" name="Email" placeholder="Email"><br>
+  <br>
+  <textarea placeholder="Feedback"></textarea>
+  <br>
+  <input type="Submit" name="Submit" value="Submit">
+  </form>
     </body>
 </html>
